--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "build": "webpack --mode production"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
