--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-    "version": 1,
-    "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
+    "version": 2,
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/src/(.*)",
+        "dest": "/src/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/src/index.js"
+      }
     ]
-}
+  }
+  
