--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
     "version": 2,
-    "rewrites": [
-      {
-        "source": "/",
-        "destination": "/src/views/vistas/inicio.hbs"
-      }
+    "routes": [
+      { "handle": "filesystem" }
     ]
   }
   
