--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "vercel": "^33.6.2"
   },
   "devDependencies": {
     "webpack": "^5.90.3",
