--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "departamentos",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "start": "node src/index.ts"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
