--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "departamentos",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.ts"
   },
   "keywords": [],
   "author": "",
