--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node src/index.ts"
+    "start": "node api/index.ts"
   },
   "keywords": [],
   "author": "",
