--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node  api/index.ts"
+    "start": "node  --watch api/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@libsql/client": "^0.6.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "express-handlebars": "^7.1.2",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.18.0",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.1.0",
-    "path-browserify": "^1.0.1",
-    "vercel": "^33.6.2"
+    "@libsql/client": "0.6.0",
+    "dotenv": "16.4.5",
+    "express": "4.18.3",
+    "express-handlebars": "7.1.2",
+    "express-mysql-session": "3.0.0",
+    "express-session": "1.18.0",
+    "morgan": "1.10.0",
+    "mysql": "2.18.1",
+    "nodemon": "3.1.0",
+    "path-browserify": "1.0.1",
+    "vercel": "33.6.2"
   },
   "devDependencies": {
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "webpack": "5.90.3",
+    "webpack-cli": "5.1.4"
   }
 }
