--- a/package.json
+++ b/package.json
@@ -17,13 +17,6 @@
     "express-mysql-session": "3.0.0",
     "express-session": "1.18.0",
     "morgan": "1.10.0",
-    "mysql": "2.18.1",
-    "nodemon": "3.1.0",
-    "path-browserify": "1.0.1",
-    "vercel": "33.6.2"
-  },
-  "devDependencies": {
-    "webpack": "5.90.3",
-    "webpack-cli": "5.1.4"
+    "mysql": "2.18.1"
   }
 }
